// Vitest Snapshot v1

exports[`<Button /> > should render correctly providing a class 1`] = `
<button
  className="_Button_4ea4ec _undefined_4ea4ec primary"
/>
`;

exports[`<Button /> > should render correctly providing a class and an onClick property 1`] = `
<button
  className="_Button_4ea4ec _undefined_4ea4ec primary"
  onClick={[Function]}
/>
`;

exports[`<Button /> > should render correctly without providing a class 1`] = `
<button
  className="_Button_4ea4ec _undefined_4ea4ec"
/>
`;
